# crypto_service

./: .env.example  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/celery_worker/: celery_app.py  tasks.py
app/core/: config.py
app/db/: init_db.py  models.py  session.py
app/deribit_client/: client.py
core/: config.py
