[tool.poetry]
name = "crypto-price-service"
version = "0.1.0"
description = "Service for collecting crypto prices from Deribit"
authors = ["Pavel"]

[tool.poetry.dependencies]
python = "^3.11"

fastapi = "^0.110"
uvicorn = "^0.27"
aiohttp = "^3.9"

sqlalchemy = "^2.0"
asyncpg = "^0.29"

celery = "^5.3"
redis = "^5.0"

pydantic = "^2.6"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"